Fixes #159. Add CSS3 Flexbox for charts in a row.
This fixes the issue that safari sometimes does not align the items in one
streight row.

--- a/web/dashboard.css
+++ b/web/dashboard.css
@@ -10,11 +10,17 @@ body {
 	margin-left: 55px;
 }
 
+netdata-chart-row {
+	width: 100%;
+	text-align: center;
+	display: flex;
+	align-items: baseline;
+	justify-content: center;
+}
+
+
 .netdata-container {
-	display: -webkit-flex; /* Safari */
-	-webkit-flex-wrap: wrap; /* Safari 6.1+ */
 	display: inline-block;
-	flex-wrap: wrap;
 	overflow: hidden;
 
 	/* required for child elements to have absolute position */
@@ -31,10 +37,7 @@ body {
 }
 
 .netdata-container-with-legend {
-	display: -webkit-flex; /* Safari */
-	-webkit-flex-wrap: wrap; /* Safari 6.1+ */
 	display: inline-block;
-	flex-wrap: wrap;
 	overflow: hidden;
 
 	/* fix minimum scrollbar issue in firefox */
